--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -3,7 +3,7 @@
 
 \section{Porenbildung bei Unterrelaxation}
 
-Nach der Adaptierung von Kupfer-Prozess-Parametern auf das Kupfer-Nickel-Multilagensystem konnten Multilagenabscheidungen simuliert werden, jedoch haben sich bei diesen verschiedene Defekte gebildet, die im Folgenden vorgestellt werden sollen.
+Nach der Adaptierung von Kupfer-Prozess-Parametern auf das Kupfer-Nickel-Multilagensystem konnten Abscheidungen von mehrlagigen Systemen simuliert werden, jedoch haben sich bei diesen verschiedene Defekte gebildet, die im Folgenden vorgestellt werden sollen.
 
 Typischerweise deuten Wachstumsdefekte auf geringe Relaxationszeiten, geringe Sputterenergien oder geringe Temperaturen hin.
 Das folgende System wurde bei \SI{500}{\kelvin} mit \SI{5.4}{\electronvolt} Auftreffenergie pro Teilchen für \SI{1.2}{\nano\second} relaxiert.
@@ -14,7 +14,7 @@ Als Resultat bilden sich Poren (Abbildung \ref{fig:multilayer_surfacefail}), die
 \begin{figure}[h]
   \centering
   \includegraphics[height=10cm]{CuNi_surface8_noalpha}
-  \caption{Draufsicht einer CuNi-Multi\-lagen\-ober\-fläche nach nur 4 Lagen (insgesamt \SI{60}{\angstrom})}
+  \caption{Draufsicht einer CuNi-Oberfläche nach nur 4 Lagen (insgesamt \SI{60}{\angstrom})}
   \label{fig:multilayer_surfacefail}
 \end{figure}
 
@@ -43,5 +43,5 @@ Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil 
 \section{Multilagen mit einer Dicke von \SI{5}{\nano\meter}}
 
 Ergänzend wurden auch Untersuchungen an Schichten mit Lagendicken begonnen, die sich mehr an experimentellen Werten von mehreren Nanometern orientieren.
-Abbildung \ref{fig:multilayer_thickfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für notwendige Optimierungsschritte nicht weiter untersucht wurde.
+Abbildung \ref{fig:multilayer_thickfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für die notwendige Optimierung der Simulationsparameter nicht weiter untersucht wurde.
 Aus diesem Grund sind auch Krater- und Porenbildungen zu beobachten, die erwartungsgemäß mit Eingabe der optimalen Werte aus Kapitel \ref{multilayer} eliminiert werden.
