--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -24,7 +24,7 @@ Aus diesem Grund ist eine einfache Voruntersuchung der verfügbaren Parametersä
     Mendelev\_Cu2\_2012.eam.fs  & Unterkühlte \ce{Al-Cu}-Schmelzen. Basiert auf \cite{mendelev_analysis_2008}  & \cite{_interatomic_2014}                 \\
     \hline
   \end{tabularx}
-  
+
 \end{table}
 
 \subsection{Voruntersuchungen}
@@ -40,7 +40,7 @@ Wie Tabelle \ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Param
 
 \begin{table}
   \begin{threeparttable}
-    \oddrowcolors 
+    \oddrowcolors
     \caption[Eigenschaften von Kupfer]{Voruntersuchungen: Vergleich der Simulationsergebnisse mit Literaturdaten}
     \label{tab:copperpreresults}
     \begin{tabularx}{\textwidth}{|Xrrrrr|}
@@ -128,7 +128,7 @@ Die kritische Bedeckung dafür liegt zwischen \SI{0.034}{\per\nano\meter\squared
 Das deutet darauf hin, dass perfekte Gitterkonfigurationen nicht robust gegenüber gerichteten Energieeinträgen ist, kleine Störungen des Gitters aber zur gleichmäßigeren Verteilung der eingebrachten Energien führen.
 
 Im weiteren Verlauf der Simulation variiert die Abbruchrate unterhalb von \SI{2}{\percent} (Abbildung \ref{fig:copperparsivald-a}).
-Sie korreliert augenscheinlich mit der RMS-Rauheit (Abbildung \ref{fig:copperparsivald-c}), die durch Oberflächenunebenheiten auf der Nanometer-Skala dominiert wird.
+Sie korreliert augenscheinlich mit der RMS-Rauheit (Abbildung \ref{fig:copperparsivald-c}), die durch Unebenheiten der Oberfläche auf der Nanometer-Skala dominiert wird.
 Mit einem nahezu konstanten RMS-Wert um \SI{1}{\angstrom} sind die gewachsenen Schichten durchgehend glatt, mit Ausnahme einzelner Simulationen.
 
 In der abgebildeten Versuchsreihe bildet das Cu\_u3.eam-System ab Schritt 70 einen \SI{2.6}{\nano\meter} breiten und \SI{3.0}{\nano\meter} tiefen \todo{Krater?}Krater aus, der schließlich zu einem \SI{1}{\nano\meter} großen \todo{void}Einschluss abgeschlossen wird (Abbildung \ref{fig:coppercrater}).
