--- a/results.tex
+++ b/results.tex
@@ -5,7 +5,7 @@ Unter Nutzung der in Kapitel \ref{theory} und Kapitel \ref{models} vorgestellten
 
 Dazu werden in eigenständigen Abschnitten verschiedene Systeme auf unterschiedliche Aspekte untersucht:
 Abschnitt \ref{goldpvd} zeigt anhand von Gold-PVD allgemeine Voruntersuchungen für einen Parametersatz, strukturelle Unterschiede zwischen realen und simulierten Schichten, Schichtabscheidung auf strukturierten Substraten sowie die praktische Skalierbarkeit der Simulation.
-Der darauf folgende Abschnitt \ref{copperpvd} stellt Voruntersuchungen unterschiedlicher Parametersätze, Oberflächenunebenheiten und deren automatische Schließung anhand von Kupfer-PVD dar.
+Der darauf folgende Abschnitt \ref{copperpvd} stellt Voruntersuchungen unterschiedlicher Parametersätze, Unebenheiten an der Oberfläche und deren automatische Schließung anhand von Kupfer-PVD dar.
 Anschließend werden Kupfer-Nickel-Multilagensysteme in Abschnitt \ref{multilayer} zur Parsivald-Simulation vorbereitet und mit LAMMPS-simulierten Systemen verglichen.
 In Abschnitt \ref{siliconpvd} werden Silizium-PVD-Systeme mit dem Ziel der Abscheidung amorpher Schichten untersucht.
 Abschnitt \ref{aluminaald} kehrt kurz zum Thema der Bachelorarbeit zurück und untersucht TMA und Wasser als Precursoren der \ce{Al2O3}-ALD.
