appendix, bibliography and unirotz reordered

--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -34,7 +34,8 @@
 \include{models}
 \include{results}
 
-\include{bibliography}
 \include{appendix}
+\include{bibliography}
+\include{unischeiss}
 
 \end{document}
